--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: go
-
 go:
   - "1.10"
   - "1.11"
   - "1.12"
+
+before_install:
+  - sudo apt-get update
 
 install:
   - ./build_test_server.sh
