--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: go
-go:
-  - "1.10"
-  - "1.11"
-  - "1.12"
+
+jobs:
+  include:
+    - go: "1.10"
+    - go: "1.11"
+    - go: "1.12"
 
 before_install:
   - sudo apt-get update
